# BrotliLib

./: .gitignore  LICENSE.txt  README.md  build.gradle  gradle.properties  publish-package.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/txtnet/brotlilib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common_jni.cc  decoder_jni.cc
app/src/main/java/com/aayushatharva/brotli4j/common/: CommonJNI.java
app/src/main/java/com/txtnet/brotlilib/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/txtnet/brotlilib/: ExampleUnitTest.java
brotli4droid/: build.gradle
brotli4droid/src/androidTest/java/com/txtnet/brotli4droid/: ExampleInstrumentedTest.java
brotli4droid/src/main/cpp/: CMakeLists.txt  native-lib.cpp
brotli4droid/src/main/java/com/txtnet/brotli4droid/: Brotli4jLoader.java
brotli4droid/src/main/java/com/txtnet/brotli4droid/common/: BrotliCommon.java  CommonJNI.java
brotli4droid/src/main/java/com/txtnet/brotli4droid/common/annotations/: Local.java  Upstream.java
brotli4droid/src/main/java/com/txtnet/brotli4droid/decoder/: BrotliDecoderChannel.java  BrotliInputStream.java  Decoder.java  DecoderJNI.java  Decoders.java  DirectDecompress.java
brotli4droid/src/main/java/com/txtnet/brotli4droid/encoder/: BrotliEncoderChannel.java  BrotliOutputStream.java  Encoder.java  EncoderJNI.java  Encoders.java  PreparedDictionary.java  PreparedDictionaryGenerator.java
brotli4droid/src/test/java/com/txtnet/brotli4droid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
